[tool.poetry]
name = "kami-messenger"
version = "0.1.0"
description = ""
authors = ["IT Team Dev Master <dev@kamico.com.br>"]
readme = "README.md"
packages = [{include = "kami_messenger"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
