[tool.poetry]
name = "kami-messenger"
version = "0.1.0"
description = ""
authors = ["IT Team Dev Master <dev@kamico.com.br>"]
readme = "README.md"
packages = [{include = "kami_messenger"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.3"


[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
